--- a/pkg/picom/picom.conf
+++ b/pkg/picom/picom.conf
@@ -108,7 +108,7 @@ inactive-opacity = 0.9;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+frame-opacity = 0.78;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -170,7 +170,7 @@ rounded-corners-exclude = [
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+blur-background = true
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
