--- a/pkg/helix/config.toml
+++ b/pkg/helix/config.toml
@@ -13,7 +13,7 @@ shell = ["zsh", "-c"]
 mode.normal = "NORMAL"
 mode.insert = "INSERT"
 mode.select = "SELECT"
-left = ["mode", "file-name"]
+left = ["mode", "file-name", "version-control"]
 center = ["spinner", "position-percentage", "file-encoding"]
 right = ["diagnostics", "primary-selection-length", "position", "file-type"]
 
@@ -25,8 +25,7 @@ display-signature-help-docs = false
 [keys.normal]
 A-F = ":fmt"
 esc = ["collapse_selection", "keep_primary_selection", ":w"]
-C-r = [":w", ":reload"]
-C-R = [":wa", ":reload-all"]
+C-r = [":reload"]
 "{" = "goto_prev_paragraph"
 "}" = "goto_next_paragraph"
 
