--- a/pkg/kitty/kitty.conf
+++ b/pkg/kitty/kitty.conf
@@ -232,7 +232,7 @@ cursor_underline_thickness 2.0
 
 #: The thickness of the underline cursor (in pts).
 
-cursor_blink_interval -1
+cursor_blink_interval 0
 
 #: The interval to blink the cursor (in seconds). Set to zero to
 #: disable blinking. Negative values mean use system default. Note
@@ -1458,7 +1458,7 @@ macos_titlebar_color system
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-macos_option_as_alt no
+macos_option_as_alt yes
 
 #: Use the Option key as an Alt key on macOS. With this set to no,
 #: kitty will use the macOS native Option+Key to enter Unicode
